--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,5 +1,5 @@
 #register {
-  background-color: rgb(159, 156, 153);
+  background-color: rgb(255, 167, 95);
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
