--- a/src/app/start/start.component.css
+++ b/src/app/start/start.component.css
@@ -21,7 +21,7 @@ span {
 }
 
 #start-page {
-  background-color: rgb(159, 156, 153);
+  background-color: rgb(255, 167, 95);
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
